tests/errors/2_syntax_errors/missing_main_bracket.java
class Main // missing '{'
    static void run() {
        int a;
        int b;
    }
}